<resources>
    <string name="app_name">StudyGroup_</string>


    <!-- for register.xml and login.xml-->
    <string name="register">Register</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>

    <!-- for activity_main.xml-->
    <string name="profile">View Profile</string>
    <string name="create_event">Create Event</string>
    <string name="join_event">Join Event</string>
    <string name="create_group">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="group_page">Group Page</string>
</resources>
